2013-02-05  Sancho Lerena <slerena@artica.es>

	* util/pandora_manage.pl: Added feature for adding
	custom traps. Improved help format syntax.

2013-02-05  Sancho Lerena <slerena@artica.es>

	* util/pandora_db.pl: Added deletion for extended session
	data (was missing and table grows to infinite!).

2013-02-05  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Set ack utimestamp when create
	a event in validated status (normal status)

2013-02-04  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Fix a broken query of my last 
	commit

2013-02-04  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm:  Set the last_known_status when
	process module to fix an error of "to normal" status
	events generation

2013-01-31  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_server,
	  conf/pandora_server.conf,
	  lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/Core.pm,
	  util/pandora_manage.pl: Added support for event storm protection and
	  disabling auto event validation.

	* lib/PandoraFMS/Server.pm: Improved the server status update function
	  to use run less queries.

2013-01-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* util/pandora_xml_stress.pl: fixed the typo messages error that
	put \ERROR instead \tERROR and the perl show warnings.

2013-01-23  Sergio Martin <sergio.martin@artica.es>

	* util/plugin/EU_10yrspread.pl: Updated the european countries
	10 years spread plugin to new bloomberg website

2013-01-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* util/pandora_xml_stress.conf
	 util/pandora_xml_stress.pl: Added group parameter in pandora stress
	 generator.

2013-01-17  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/DataServer.pm: Added support for log modules.

2013-01-16  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_db.pl: Added the history events to the 
	maintenance script of database and delete the old events in
	1000 events blocks
