@@ -1,3 +1,11 @@
+2013-02-06  Sergio Martin <sergio.martin@artica.es>
+
+	* lib/PandoraFMS/NetworkServer.pm
+	lib/PandoraFMS/Tools.pm: Added check to the ping latency
+	modules to difference the fail from the 0 latency. Now
+	when the IP doenst exist or the ping fail, the module
+	doesnt report any data. FIX: 3543467
+
 2013-02-05  Sancho Lerena <slerena@artica.es>
 
 	* util/pandora_manage.pl: Added feature for adding
